[package]
name = "duino-miner"
version = "0.1.9"
edition = "2018"

[dependencies]
ureq = { version = "*", default-features = false, features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

sha-1 = { version = "0.9", features = ["asm"] }
data-encoding = "2.3"
rand = "0.8"
parity-wordlist = "1"
hex = "0.4"

clap = "3.0.0-beta.2"
thiserror = "1.0"
log = "0.4"
pretty_env_logger = "0.4"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
